<resources>
    <string name="app_name">WeatherGB</string>
    <string name="hello">Good day!</string>
    <string name="Button">"?"</string>
    <string name="button2">"+"</string>
    <string name="City">"Moscow"</string>
    <string name="weather">"0"</string>
    <string name="textType">" Clear"</string>
    <string name="Default_bg">Default_bg</string>
    <string name="dodo">\@string/dodo</string>

    <string name="Plus">"+"</string>
    <string name="Celsius">C</string>

    <string name="PastWT">11.00</string>
    <string name="PresentWT">Present</string>
    <string name="FutureWT">13.00</string>

    <string name="PastTemp">+ 8 C</string>
    <string name="PresentTemp">+ 9 C</string>
    <string name="FutureTemp">+ 12 C</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="ButtonChose">Add</string>
    <string name="Enter">Enter your City:</string>
    <string name="ParcelText">""</string>
    <string name="AddButton">Add</string>
    <string name="DefaultTemp">+ 10 C</string>
    <string name="Popular">Popular:</string>
    <string name="icon">icon</string>
    <string name="Default">Moscow</string>
    <string name="textCloudy">Cloudy</string>

    <string name="Wind">Wind</string>
    <string name="Pressure">Pressure</string>
    <string name="Humidity">Humidity</string>
    <string name="DefaultUnit">0</string>
    <string name="Refresh">R</string>
    <string name="EmptyValue" />
    <string name="Meters">M</string>
    <string name="History">History:</string>

</resources>
