<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/Default_bg"
        android:layout_width="529dp"
        android:layout_height="891dp"
        android:contentDescription="@string/Default_bg"
        android:tint="#22FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/default_cloudy_blur" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="354dp"
        android:layout_height="44dp"
        android:layout_marginBottom="16dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/textCity"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.542"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <Button
            android:id="@+id/buttonAdd"
            android:layout_width="73dp"
            android:layout_height="wrap_content"
            android:onClick="open"
            android:text="@string/button2" />

        <TextView
            android:id="@+id/textStatus"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:text="@string/hello"
            android:textSize="20sp" />

        <Button
            android:id="@+id/buttonQuestion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onClick"
            android:text="@string/Button" />
    </LinearLayout>

    <TextView
        android:id="@+id/textCity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/City"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.263"
        tools:text="@string/City" />

    <LinearLayout
        android:layout_width="91dp"
        android:layout_height="109dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.432">

        <TextView
            android:id="@+id/textWeather"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/weather"
            android:textSize="30sp"
            tools:text="+ 15" />

        <TextView
            android:id="@+id/textType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/textType"
            android:textSize="18sp" />

    </LinearLayout>

</android.support.constraint.ConstraintLayout>