<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/SecondLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/newcb"
    android:orientation="vertical"
    tools:context=".SecondActivity">

    <TextView
        android:id="@+id/EnterView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Enter"
        android:textColor="#000000"
        android:textSize="30sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/UserText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:autofillHints=""
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/ParcelText"
        tools:ignore="LabelFor" />

    <Button
        android:id="@+id/button2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="AddButton"
        android:text="@string/AddButton" />

    <TextView
        android:id="@+id/PopularText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="30dp"
        android:text="@string/Popular"
        android:textColor="#000000"
        android:textSize="30sp"
        android:textStyle="bold" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view"
        android:layout_width="match_parent"
        android:layout_height="237dp"
        tools:listitem="@layout/item" />

</LinearLayout>